--- a/css/index.css
+++ b/css/index.css
@@ -170,7 +170,7 @@ body {
 @media (max-width: 570px) {
   .header__main {
     margin-top: 0;
-    min-height: 800px;
+    min-height: auto;
   }
 }
 .header__left_block {
@@ -205,8 +205,8 @@ body {
     justify-content: center;
     align-items: center;
     width: 80%;
-    margin: 15% 0 0 0;
-    height: 50vh;
+    margin: 80px 0 0 0;
+    height: 420px;
   }
 }
 .header__right_block {
@@ -256,10 +256,10 @@ body {
 }
 @media (max-width: 570px) {
   .header__phone {
-    width: 50%;
-    height: 120%;
-    left: 30%;
-    top: 20%;
+    width: 80%;
+    height: 100%;
+    left: 20%;
+    top: 10%;
   }
 }
 .header__rectangle {
@@ -279,6 +279,7 @@ body {
 }
 @media (max-width: 570px) {
   .header__rectangle {
+    width: 280px;
     margin-left: 0;
     margin-bottom: 0;
   }
