--- a/css/index.css
+++ b/css/index.css
@@ -76,6 +76,18 @@ body {
   flex: 1 0 100%;
   position: relative;
 }
+
+@media (max-width: 1200px) {
+  .header-content {
+    height: 80vh;
+  }
+}
+@media (max-width: 850px) {
+  .header-content {
+    height: 50vh;
+  }
+}
+
 @media (max-width: 768px) {
   .header-content {
     min-height: 970px;
@@ -232,7 +244,7 @@ body {
 }
 .header__phone {
   width: 100%;
-  height: 120%;
+  height: 100%;
   position: absolute;
   top: 10%;
   right: 0;
@@ -687,7 +699,8 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  height: 100vh;
+  height: auto;
+  padding-bottom: 60px;
 }
 @media (max-width: 768px) {
   .FAQ {
